--- a/GraphStudio.Web/Components/Inspectors/GraphInspector.razor
+++ b/GraphStudio.Web/Components/Inspectors/GraphInspector.razor
@@ -2,7 +2,7 @@
 
 @using System.Text.Json
 @using GraphStudio.Web.Services
-@inject GraphSelectionState SelectionState
+@inject GraphSelectionService SelectionState
 @inject GraphInteractionService Interaction
 <div class="small text-muted">
     @DateTime.Now.ToLongTimeString()
@@ -36,7 +36,7 @@
     protected override void OnInitialized()
     {
         SelectionState.Changed += OnSelectionChanged;
-    }
+    } 
 
     private void OnSelectionChanged()
         => InvokeAsync(StateHasChanged);
